# Conflux

./: .buildinfo  .gitignore  README.md  base.html  examples_toc.html  genindex.html  getting-started.html  handlers.html  index.html  objects.inv  py-modindex.html  pyproject.toml  retrieval.html  search.html  searchindex.js
.github/workflows/: deploy_docs.yml  tests.yml
_sources/examples_docs/: __init__.rst.txt  mcp_tool_call.rst.txt
conflux/: __init__.py  handlers.py  utils.py
conflux/mcp/: client.py
conflux/retrieval/: __init__.py  join_policies.py
docs/: conf.py
examples/: __init__.py
examples_docs/: __init__.html  comapny_name_and_tagline.html  company_name_w_decorator.html  handler_chain_uses.html  mcp_tool_call.html  message_as_string.html  rag_example.html
tests/: test_ensure_msg_info_is_propagated.py  test_examples.py  test_rag.py
