[project]
name = "conflux"
version = "0.6.3"
description = "Build prompt pipelines easily."
authors = [{ name = "Pritam Dey", email = "pritamdey@ailens.ai" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "numpy>1.25.0, <3.0.0",
    "openai~=1.12",
    "pillow~=10.0",
    "pydantic>=2.8.0,<3",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.9.0,<2"]

[dependency-groups]
dev = [
    "pytest~=8.2",
    "python-dotenv",
    "sphinx~=7.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-rtd-theme==1.3.0",
    "sphinxcontrib-mermaid==1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ""
minversion = "8.0"
testpaths = ["tests"]
