[project]
name = "conflux"
version = "0.6.3"
description = "Build prompt pipelines easily."
authors = [{ name = "Pritam Dey", email = "pritamdey@ailens.ai" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "fastmcp",
    "numpy>1.25.0, <3.0.0",
    "openai~=1.12",
    "pillow~=10.0",
    "pydantic>=2.8.0,<3",
]

[project.optional-dependencies]
faiss = ["faiss-cpu>=1.11.0,<2"]

[dependency-groups]
dev = [
    "pytest~=8.2",
    "python-dotenv",
    "sphinx~=7.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-rtd-theme==1.3.0",
    "sphinxcontrib-mermaid==1.0.0",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ""
minversion = "8.0"
testpaths = ["tests"]

[tool.uv.sources]
fastmcp = { git = "https://github.com/jlowin/fastmcp.git", rev = "725f256a8f1c23b584135d5e8461fae9edb081ba" }

[tool.poe.tasks]
precmt = "pre-commit run --all-files"